--- a/public/perfil.html
+++ b/public/perfil.html
@@ -11,59 +11,113 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             line-height: 1.6;
             color: #333;
             margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
+            padding: 0;
+            background-color: #f4f4f4;
         }
         .container {
-            max-width: 800px;
-            margin: auto;
+            max-width: 900px;
+            margin: 20px auto;
             background-color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
         }
-        h1, h2 {
+        h1 {
             color: #2c3e50;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .user-info {
+            background-color: #3498db;
+            color: #fff;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            text-align: center;
+            font-size: 1.2em;
+        }
+        .date-filter {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 30px;
+        }
+        .date-filter input {
+            padding: 10px;
+            font-size: 1em;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+        .btn {
+            padding: 10px 20px;
+            font-size: 1em;
+            color: #fff;
+            background-color: #27ae60;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .btn:hover {
+            background-color: #2ecc71;
+        }
+        .metrics {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin-bottom: 30px;
         }
         .metric {
             background-color: #3498db;
             color: #fff;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            transition: transform 0.3s;
+        }
+        .metric:hover {
+            transform: translateY(-5px);
         }
         .metric span {
+            display: block;
+            font-size: 2em;
             font-weight: bold;
-            font-size: 1.2em;
+            margin-top: 10px;
         }
         .chart-container {
-            margin-top: 20px;
+            margin-top: 30px;
+            height: 300px;
         }
-        #dateFilter {
-            margin-bottom: 20px;
+        #informEarnings {
+            display: block;
+            width: 200px;
+            margin: 30px auto 0;
+            padding: 15px;
+            font-size: 1.1em;
+            background-color: #e74c3c;
         }
-        #dateFilter input {
-            margin-right: 10px;
+        #informEarnings:hover {
+            background-color: #c0392b;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Perfil do Motoboy</h1>
-        <div id="userInfo"></div>
-        <div id="dateFilter">
-            <label for="date">Selecione a data:</label>
+        <div id="userInfo" class="user-info"></div>
+        <div class="date-filter">
             <input type="date" id="date">
-            <button onclick="updateProfile()">Filtrar</button>
+            <button onclick="updateProfile()" class="btn">Filtrar</button>
         </div>
-        <div id="profileInfo"></div>
+        <div id="profileInfo" class="metrics"></div>
         <div class="chart-container">
             <canvas id="deliveriesChart"></canvas>
         </div>
+        <button id="informEarnings" class="btn" onclick="window.location.href='chatbot.html'">Informar Ganhos</button>
     </div>
 
     <script>
@@ -99,7 +153,7 @@
             if (user) {
                 currentUser = user;
                 const motoboyName = motoboyInfo[user.email] || 'Motoboy';
-                document.getElementById('userInfo').innerHTML = `<p>Bem-vindo, ${motoboyName}!</p>`;
+                document.getElementById('userInfo').innerHTML = `Bem-vindo, ${motoboyName}!`;
                 updateProfile();
             } else {
                 window.location.href = 'login.html'; // Redireciona para a página de login se não estiver autenticado
@@ -153,10 +207,10 @@
         function updateProfileInfo(stats) {
             const profileInfo = document.getElementById('profileInfo');
             profileInfo.innerHTML = `
-                <div class="metric">Total de Pedidos: <span>${stats.totalOrders}</span></div>
-                <div class="metric">Pedidos Concluídos: <span>${stats.completedOrders}</span></div>
-                <div class="metric">Pedidos em Andamento: <span>${stats.ongoingOrders}</span></div>
-                <div class="metric">Ganhos do Dia: <span>R$ ${stats.totalEarnings.toFixed(2)}</span></div>
+                <div class="metric">Total de Pedidos<span>${stats.totalOrders}</span></div>
+                <div class="metric">Pedidos Concluídos<span>${stats.completedOrders}</span></div>
+                <div class="metric">Pedidos em Andamento<span>${stats.ongoingOrders}</span></div>
+                <div class="metric">Ganhos do Dia<span>R$ ${stats.totalEarnings.toFixed(2)}</span></div>
             `;
 
             const ctx = document.getElementById('deliveriesChart').getContext('2d');
@@ -167,7 +221,7 @@
                     datasets: [{
                         label: 'Entregas por Hora',
                         data: stats.deliveriesPerHour,
-                        backgroundColor: '#36A2EB'
+                        backgroundColor: '#3498db'
                     }]
                 },
                 options: {
@@ -187,7 +241,7 @@
         async function updateProfile() {
             if (!currentUser) return;
 
-            const date = document.getElementById('date').value || new Date().toISOString().split('T')[0];
+            const date = document.getElementById('date').value;
             const motoboyName = motoboyInfo[currentUser.email];
 
             try {
@@ -200,8 +254,17 @@
             }
         }
 
+        // Função para definir a data atual
+        function setCurrentDate() {
+            const today = new Date();
+            const year = today.getFullYear();
+            const month = String(today.getMonth() + 1).padStart(2, '0');
+            const day = String(today.getDate()).padStart(2, '0');
+            document.getElementById('date').value = `${year}-${month}-${day}`;
+        }
+
         // Inicializa a página com a data atual
-        document.getElementById('date').valueAsDate = new Date();
+        setCurrentDate();
     </script>
 </body>
 </html>
