--- a/public/perfil.html
+++ b/public/perfil.html
@@ -233,6 +233,7 @@
                     }]
                 },
                 options: {
+                    responsive: true,
                     scales: {
                         x: {
                             beginAtZero: true
