--- a/public/perfil.html
+++ b/public/perfil.html
@@ -51,7 +51,6 @@
             font-size: 1em;
             border: 1px solid #ddd;
             border-radius: 5px;
-            margin-right: 10px;
         }
         .btn {
             padding: 10px 20px;
@@ -100,12 +99,6 @@
             padding: 15px;
             font-size: 1.1em;
             background-color: #e74c3c;
-            color: #fff;
-            text-align: center;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
         }
         #informEarnings:hover {
             background-color: #c0392b;
@@ -161,7 +154,6 @@
                 currentUser = user;
                 const motoboyName = motoboyInfo[user.email] || 'Motoboy';
                 document.getElementById('userInfo').innerHTML = `Bem-vindo, ${motoboyName}!`;
-                setInitialDate();
                 updateProfile();
             } else {
                 window.location.href = 'login.html'; // Redireciona para a página de login se não estiver autenticado
@@ -235,9 +227,12 @@
                 options: {
                     responsive: true,
                     scales: {
-                        x: {
-                            beginAtZero: true
-                        }
+                        yAxes: [{
+                            ticks: {
+                                beginAtZero: true,
+                                stepSize: 1
+                            }
+                        }]
                     }
                 }
             });
@@ -247,7 +242,7 @@
             if (!currentUser) return;
 
             const date = document.getElementById('date').value;
-            const motoboyName = motoboyInfo[currentUser.email] || 'Motoboy';
+            const motoboyName = motoboyInfo[currentUser.email];
 
             try {
                 const orders = await fetchOrders(date);
@@ -259,11 +254,17 @@
             }
         }
 
-        function setInitialDate() {
-            const initialDate = new Date(2024, 7, 8).toISOString().split('T')[0]; // 8 de agosto de 2024
-            const today = new Date().toISOString().split('T')[0]; // Data atual
-            document.getElementById('date').value = today > initialDate ? today : initialDate;
+        // Função para definir a data atual
+        function setCurrentDate() {
+            const today = new Date();
+            const year = today.getFullYear();
+            const month = String(today.getMonth() + 1).padStart(2, '0');
+            const day = String(today.getDate()).padStart(2, '0');
+            document.getElementById('date').value = `${year}-${month}-${day}`;
         }
+
+        // Inicializa a página com a data atual
+        setCurrentDate();
     </script>
 </body>
 </html>
