--- a/public/perfil.html
+++ b/public/perfil.html
@@ -51,6 +51,7 @@
             font-size: 1em;
             border: 1px solid #ddd;
             border-radius: 5px;
+            margin-right: 10px;
         }
         .btn {
             padding: 10px 20px;
@@ -99,6 +100,12 @@
             padding: 15px;
             font-size: 1.1em;
             background-color: #e74c3c;
+            color: #fff;
+            text-align: center;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
         #informEarnings:hover {
             background-color: #c0392b;
@@ -154,6 +161,7 @@
                 currentUser = user;
                 const motoboyName = motoboyInfo[user.email] || 'Motoboy';
                 document.getElementById('userInfo').innerHTML = `Bem-vindo, ${motoboyName}!`;
+                setInitialDate();
                 updateProfile();
             } else {
                 window.location.href = 'login.html'; // Redireciona para a página de login se não estiver autenticado
@@ -227,12 +235,9 @@
                 options: {
                     responsive: true,
                     scales: {
-                        yAxes: [{
-                            ticks: {
-                                beginAtZero: true,
-                                stepSize: 1
-                            }
-                        }]
+                        x: {
+                            beginAtZero: true
+                        }
                     }
                 }
             });
@@ -242,7 +247,7 @@
             if (!currentUser) return;
 
             const date = document.getElementById('date').value;
-            const motoboyName = motoboyInfo[currentUser.email];
+            const motoboyName = motoboyInfo[currentUser.email] || 'Motoboy';
 
             try {
                 const orders = await fetchOrders(date);
@@ -254,17 +259,11 @@
             }
         }
 
-        // Função para definir a data atual
-        function setCurrentDate() {
-            const today = new Date();
-            const year = today.getFullYear();
-            const month = String(today.getMonth() + 1).padStart(2, '0');
-            const day = String(today.getDate()).padStart(2, '0');
-            document.getElementById('date').value = `${year}-${month}-${day}`;
+        function setInitialDate() {
+            const initialDate = new Date(2024, 7, 8).toISOString().split('T')[0]; // 8 de agosto de 2024
+            const today = new Date().toISOString().split('T')[0]; // Data atual
+            document.getElementById('date').value = today > initialDate ? today : initialDate;
         }
-
-        // Inicializa a página com a data atual
-        setCurrentDate();
     </script>
 </body>
 </html>
