--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 
         onAuthStateChanged(auth, (user) => {
             if (user) {
-                window.location.href = 'menu.html'; // Redireciona se já estiver autenticado
+                window.location.href = 'chatbot.html'; // Redireciona se já estiver autenticado
             }
         });
     </script>
