--- a/public/perfil.html
+++ b/public/perfil.html
@@ -191,7 +191,7 @@
             };
 
             orders.forEach(order => {
-                if (order.courier && (order.courier.courierName === motoboyName || order.courier.courierName === motoboyName.replace(' José', ''))) {
+                if (order.courier && order.courier.courierName === motoboyName) {
                     stats.totalOrders++;
                     if (order.status === 'closed' || order.status === 'delivered') {
                         stats.completedOrders++;
